syntax="proto3";
package chatroom;
import "common/common.proto";

service RoomService {
    rpc Create(CreateRoomRequest) returns (CreateRoomResponse);
    rpc Available(AvailableRequest) returns (RoomListResponse);
    rpc Delete(DeleteRoomRequest) returns (common.Response);
}

message CreateRoomRequest {
    repeated string memberNames = 1;
    map<string, string> data = 2;
}

message DeleteRoomRequest {
    string id = 1;
}

message CreateRoomResponse {
    common.Result result = 1;
    Room room = 2;
}

message AvailableRequest{
    string memberName = 1;
}

message Room {
    string id = 1;
    repeated string memberNames = 2;
    map<string, string> data = 3;
}

message RoomListResponse {
    common.Result result = 1;
    repeated Room rooms = 2;
}